syntax = "proto3";

option go_package = "genprotos/";

package business;

service Business{
    rpc CreateBusiness(CreateBusinessRequest) returns(CreateBusinessResponse){}
    rpc UpdateBusiness(UpdateBusinessRequest) returns(UpdateBusinessResponse){}
    rpc DeleteBusiness(DeleteBusinessRequest) returns(DeleteBusinessResponse){}
    rpc GetByIdBusiness(GetByIdBusinessRequest) returns(GetByIdBusinessResponse){}
    rpc GetAllBusinesses(GetAllBusinessesRequest) returns(GetAllBusinessesResponse){}
}

message CreateBusinessRequest{
    string name  = 1;
    string description = 2;
    string category = 3;
    string contact_info = 4;
    string hours_of_operation = 5;
    string owner_id = 6;
    string location_id = 7;
}

message CreateBusinessResponse{}

message UpdateBusinessRequest{
    string id = 1;
    string name = 2;
    string description = 3;
    string category = 4;
    string contact_info = 5;
    string hours_of_operation = 6;
    string owner_id = 7;
    string location_id = 8;

}

message UpdateBusinessResponse{
    string name  = 1;
    string description = 2;
    string category = 3;
    string contact_info = 4;
    string hours_of_operation = 5;
    string owner_id = 6;
    string location_id = 7;

}

message DeleteBusinessRequest{
    string id = 1;
    string owner_id = 2;
}

message DeleteBusinessResponse{}

message GetByIdBusinessRequest{
    string id = 1;
}

message GetByIdBusinessResponse{
    string id = 1;
    string name = 2;
    string description = 3;
    string category = 4;
    string contact_info = 5;
    string hours_of_operation = 6;
    string owner_id = 7;
    float average_ratings = 8;
    string location_id = 9;

}

message GetAllBusinessesRequest{
    int32 page = 1;
    string name = 2;
    float average_ratings = 3;
    string category = 4;
    string contact_info = 5;
    string hours_of_operation = 6;
    string owner_id = 7;
    string location = 8;

}

message GetAllBusinessesResponse{
    repeated GetByIdBusinessResponse businesses = 1;
}