syntax = "proto3";

option go_package = "genprotos/";

package reviews;

service Reviews{
    rpc CreateReview(CreateReviewRequest) returns(CreateReviewResponse){}
    rpc UpdateReview(UpdateReviewRequest) returns(UpdateReviewResponse){}
    rpc DeleteReview(DeleteReviewRequest) returns(DeleteReviewResponse){}
    rpc GetOwnReviews(GetOwnReviewsRequest) returns(GetOwnReviewsResponse){}
    rpc GetReviewByBusinessId(GetReviewByBusinessIdRequest) returns(GetReviewByBusinessIdResponse){}
}

message CreateReviewRequest{
    string business_id = 1;
    string user_id = 2;
    int32 rating = 3;
    string text = 4; 
}

message CreateReview{
    string business_id = 1;
    string text = 2; 
    int32 rating = 3;
}

message CreateReviewResponse{}

message UpdateReviewRequest{
    string business_id = 1;
    string user_id = 2;
    int32 rating = 3;
    string text = 4; 
    string id = 5;
}

message UpdateReviewResponse{
    string business_id = 1;
    string user_id = 2;
    int32 rating = 3;
    string text = 4; 
    string id = 5;
}

message DeleteReviewRequest{
    string user_id = 1;
    string id = 2;
}

message DeleteReview{
    string id = 1;
}

message DeleteReviewResponse{}

message GetOwnReviewsRequest{
    string user_id = 1;
}

message GetOwnReviewsResponse{
    repeated UpdateReviewRequest reviews = 1;
}

message GetReviewByBusinessIdRequest {
    string business_id = 1;
    int32 page = 2;
  }
  
message GetReviewByBusinessIdResponse{
    repeated UpdateReviewRequest reviews = 1;
}

message GetReviewByBusinessIdWithAverageRatingResponse {
    repeated UpdateReviewRequest reviews = 1;
    double average_rating = 2; 
}
